JumpScript/tests/baselines/reference/parserForOfStatement20.errors.txt
tests/cases/conformance/parser/ecmascript6/Iterators/parserForOfStatement20.jump(1,10): error TS1189: The variable declaration of a 'for...in' statement cannot have an initializer.


==== tests/cases/conformance/parser/ecmascript6/Iterators/parserForOfStatement20.jump (1 errors) ====
    for (var of = 0 in of) { }
             ~~
!!! error TS1189: The variable declaration of a 'for...in' statement cannot have an initializer.